# morpheum-cli

./: .gitignore  Cargo.toml  README.md  architecture.md
docs/: command-structure.md  project-tree.md  top-level-commands.md  two-layers-architecture.md
src/: cli.rs  config.rs  dispatcher.rs  error.rs  keyring.rs  lib.rs  main.rs  output.rs  status.rs  transport.rs
src/a2a/: commands.rs
src/bridge/: commands.rs  mod.rs
src/keys/: commands.rs
src/mcp/: commands.rs
src/mwvm/: commands.rs
src/query/: agent_registry.rs  agentreg.rs  bank.rs  cctp.rs  cosmwasm.rs  directory.rs  gmp.rs  gov.rs  identity.rs  inference_registry.rs  inferreg.rs  intent.rs  interop.rs  job.rs  marketplace.rs  memory.rs  mod.rs  registry.rs  reputation.rs  svm_usdc.rs  validation.rs  vc.rs  x402.rs
src/tx/: agent_registry.rs  agentreg.rs  bank.rs  cosmwasm.rs  directory.rs  gmp.rs  gov.rs  identity.rs  inference_registry.rs  inferreg.rs  intent.rs  interop.rs  job.rs  marketplace.rs  memory.rs  mod.rs  reputation.rs  svm_usdc.rs  validation.rs  vc.rs  x402.rs
src/utils/: mod.rs  query_client_ext.rs  tx_builder_ext.rs
src/xchain/: mod.rs
tests/: integration.rs
